--- a/MacDown/Resources/Styles/Clearness.css
+++ b/MacDown/Resources/Styles/Clearness.css
@@ -159,6 +159,10 @@ kbd {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
 	}
+	pre code, pre tt {
+		white-space: pre-wrap !important;
+		overflow-wrap: break-word;
+	}
 	code, tt {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
