--- a/MacDown/Resources/Styles/GitHub.css
+++ b/MacDown/Resources/Styles/GitHub.css
@@ -92,6 +92,10 @@ kbd {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
 	}
+	pre code, pre tt {
+		white-space: pre-wrap !important;
+		overflow-wrap: break-word;
+	}
 	code, tt {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
