--- a/MacDown/Resources/Styles/GitHub2.css
+++ b/MacDown/Resources/Styles/GitHub2.css
@@ -311,6 +311,10 @@ kbd {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
 	}
+	pre code, pre tt {
+		white-space: pre-wrap !important;
+		overflow-wrap: break-word;
+	}
 	code, tt {
 		white-space: pre-wrap !important;
 		overflow-wrap: break-word;
